--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,6 @@
 .container-fluid{
   border-bottom: 1px solid white;
+  padding: 0;
 }
 
 
@@ -37,7 +38,7 @@
 
 .avatar-grey-page {
   width: 7em;
-  background-color: #d8d8d8;
+  background-color: #D9D9D9;
   position: relative;
   top: 0.5em;
   left: 0.8em;
