--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -17,7 +17,7 @@
 
 .text-index-page{
   margin-top: 1em;
-  font-family: $body-font !important;
+  font-family: $headers-font !important;
   font-size: 19px !important;
 }
 
@@ -25,10 +25,11 @@
   background-color: #d8d8d8 ;
   color: white;
   .home-container p {
-  color: $blue !important;
+    color: $blue !important;
   }
   .container-fluid{
     border-bottom: 1px solid $white;
+    // padding: 9px;
   }
   .footer {
     border-top: 1px solid $white;
@@ -38,6 +39,25 @@
   p.investor-title{
     color: white !important;
   }
+
+  p#joining-text  {
+    color: #17185E !important;
+    position: absolute;
+    left: 23.9em;
+    font-size: 2.5em;
+    top: 4.7em;
+  }
+
+  .home-description {
+    width: 40%;
+    margin-top: 7.1em;
+  }
+
+  .home-description p {
+    font-size: 2.3em !important;
+  }
+
+
 }
 
 .home-container p {
@@ -49,7 +69,7 @@
 
 .home-description {
   width: 40%;
-  text-align: justify;
+
   margin-top: 2em;
 }
 
@@ -58,6 +78,7 @@
   height: 16em;
   position: absolute;
   right: 22em;
+  top:25.1em;
 }
 
 .home-signup ul {
@@ -75,6 +96,10 @@ letter-spacing: 2px;
 .home-signup a {
   color:white;
   text-decoration: none;
+}
+
+#sign-up-as {
+  font-size: 30px;
 }
 
 .startup-search-container {
@@ -99,16 +124,19 @@ input.search-bar {
 }
 
 .list-itself {
-
-  width: 562px;
-  margin-right: 78px;
+  width: 33em;
+  margin-right: 111px;
+  border-top: 1px solid white;
 }
 
 select#industry {
   padding: 12px;
+  border-radius: 0;
+  border:none;
   font-family: $headers-font;
   color: $blue;
   width: 13em;
+  outline: none;
 }
 
 select#country {
@@ -116,6 +144,9 @@ select#country {
   font-family: $headers-font;
   color: $blue;
   width: 13em;
+  border:none;
+  border-radius:none;
+  outline:none;
 }
 
 select#funding {
@@ -123,15 +154,21 @@ select#funding {
   font-family: $headers-font;
   color: $blue;
   width: 12em;
+  border:none;
+  border-radius:none;
+  outline:none;
 }
 
 
 input.search-bar-home {
   position: relative;
   width: 33em;
+  border: none;
   outline: none;
+  border-radius: 0;
   height: 2.6em;
 }
+
 
 
 #button-search{
@@ -170,10 +207,10 @@ select#investor_funding_type{
   background-color: white;
   height: 2.1em;
   position: absolute;
-  top: 203.5px;
+  top: 202.5px;
   margin-left: 5px;
-  color: $blue;
-  border-radius: 2px;
+  color: #17185E;
+  border-radius: 0;
 }
 
 .gallery {
